# docs/api.yaml
@@ -539,12 +539,19 @@ paths:
                   success:
                     type: boolean
                     example: true
-                  message:
-                    type: string
-                  reportContent:
-                    type: string
-                  modelUsed:
-                    type: string
+                  data:
+                    type: object
+                    properties:
+                      reportContent:
+                        type: string
+                      modelUsed:
+                        type: string
+                      modelDisplayName:
+                        type: string
+                      cbtDataSource:
+                        type: string
+                      cbtDataAvailable:
+                        type: boolean
         400:
           $ref: '#/components/responses/BadRequest'
         500:
